--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
+	<!-- favicon, fill with a 512x512px .png image named 'favicon.png' -->
+    <link rel="icon" href="assets/images/favicon/favicon.png" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<!--	<link rel="icon" href="assets/images/favicon/favicon.png" sizes="32x32" />-->
 	<title>Stored energy, bound to be released.</title>
 	<!--	<link rel="stylesheet" href="assets/css/normalize.css">-->
 	
