--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 					<li id="fn-4" value="4">
 						ArchDaily. “Light Matters: Louis Kahn and the Power of Shadow”, 2013,
 						<span>(<a
-								href="https://www.archdaily.com/362554/light-matters-louis-kahn-and-the-power-of-shadow">url</a>)</span>
+								href="https://www.archdaily.com/362554/light-matters-louis-kahn-and-the-power-of-shadow" target="_blank">url</a>)</span>
 						<span class="footnotereverse"><a href="#fnref-3">↩</a></span>
 					</li>
 				</ol>
@@ -769,14 +769,14 @@
 
 
 
-<section class="transition" style="--from: rgb(53, 53, 53); --to: #666666"></section>
-<section style="background-color: #666666">
+<section class="transition" style="--from: rgb(53, 53, 53); --to: #a9bbcf"></section>
+<section style="background-color: #a9bbcf">
 
 
 
 <section class="section-text-block">
 	<div class="subsection subsection-is-main">
-		<section style="color: #fb2424">
+		<section style="color: #ff0000"> 
 		<h2 id="intergration">INTERGRATION</h2>
 		
 		<p>We raved the night away. The brightness of the new day pulls me back to reality as I make my way home. I like this
@@ -889,6 +889,7 @@
 				</ol>
 
 				<div class="end">
+					<br>
 					<p>
 						Written by Loïs van Spijk<br>
 						Thesis supervised by Dirk Vis<br>
