--- a/index.html
+++ b/index.html
@@ -838,12 +838,12 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(53, 53, 53); --to: #4D4D4D"></section>
-<section style="background-color: #FF1200">
+<section style="background-color: #9aadc3;">
 
 
 	<section class="section-text-block">
 		<div class="subsection subsection-is-main">
-			<section style="color: #ffffff;">
+			<section style="color: #DDFF00;">
 				<h2 id="bibliography">BIBLIOGRAPHY</h2>
 				<ol class="footnotes-list">
 
