--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(166, 166, 166); --to:  #B3B3B3"></section>
-<section style="background-color:#9a9a9a">
+<section style="background-color:#a8a7a7">
 
 		<section class="section-text-block order">
 		<div class="subsection subsection-is-main">
@@ -233,7 +233,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			<h2 id="chapter-1">01. SIGHT </h2>
 
 	<p>Through contemplated scenography the spaces where raves occur temporarily transform into utopian places. We travel to
-		unknown <br>destinations, <sup class="footnote"><a id="fnref-3" href="#fn-3">3</a></sup> away from home and normal life.
+		unknown destinations, <sup class="footnote"><a id="fnref-3" href="#fn-3">3</a></sup> away from home and normal life.
 		We enter a new landscape. One in which all noses literally and figuratively point in the same direction. Whether the
 		rave takes place in a small bunker-like room, a high-ceilinged old factory, or in the middle of a forest, these
 		spaces take on new shapes when they morph into a large mass of dancing bodies. The residual space fills itself with
