--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="assets/images/favicon/favicon.png" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Stored energy, bound to be released.</title>
-	<!--	<link rel="stylesheet" href="assets/css/normalize.css">-->
+		<link rel="stylesheet" href="assets/css/normalize.css">
 
 	<link rel="stylesheet" href="assets/css/style2.css">
 	<script type="text/javascript" src="assets/js/script.js" defer></script>
