--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
 							<!-- <p><br></p> -->
 							<p>
+								<br>
 							<iframe style="border-radius:12px"
 								src="https://open.spotify.com/embed/playlist/7msUnYWpWGzBrMm6SR3AAt?utm_source=generator" width="100%" height="352"
 								frameBorder="0" allowfullscreen=""
 								allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 							</p>
+							
 								<p>
+									<br>
 								The moments when I most strongly connected with my writing were during what I call my moments of "writing trance". This state
 								required certain external conditions. Picture this:
 								</p>
@@ -65,10 +68,12 @@
 								the screen of my laptop. I shape the sentences like a sculptor shapes his work.
 								</p>
 								<p>
+									<br>
 								It really was the music that created immense joy within me while writing. And for that I do feel the need to THANK some
 								of the tracks that guided me through the nights, creating my perfect ‘writing trance’. Feel free to listen to some of
 								them while reading.
 								</p>
+								<br>
 								Love,<br>
 								
 								Lo
@@ -87,7 +92,7 @@
 <main>
 
 		<div class="subsection subsection-is-main">
-			<div class="title"> Stored energy, bound to be <br>released</P>
+			<div class="title"> <h1> Stored energy, bound to be released</h1></P>
 			</div>
 		</div>
 
@@ -100,11 +105,11 @@
 						<ul style="list-style-type:none;">
 							<div id="table-of-contents"></div>
 							<li><a href="#abstract">Abstract</a></li>
-							<li><a href="#preperation">Preperation</a></li>
+							<li><a href="#preperation">preparation</a></li>
 							<li><a href="#chapter-1">01. Sight</a></li>
 							<li><a href="#chapter-2">02. Sound </a></li>
 							<li><a href="#chapter-3">03. Space</a></li>
-							<li><a href="#intergration">Intergration</a></li>
+							<li><a href="#intergration">Integration</a></li>
 							<li><a href="#bibliography">Bibliography</a></li>
 						</ul>
 					</nav>
@@ -175,14 +180,14 @@ a photographer and graphic designer.</p>
 <section class="section-text-block">
 
 <div class="subsection subsection-is-main">
-<h2 id="preperation">PREPERATION</h2>
+<h2 id="preperation">PREPARATION</h2>
 
 <p>This piece of writing is constructed into three chapters: <br>
 <i>—Sight, Sound, and Space.</i> &nbsp;&nbsp;I was inspired by the titles of the three-fold compilation album of tracks by
 Jeff Mills (released in 2019). Each album contains around 14 tracks, curated to embody Mills’s interpretation of the
 three words: Sight, Sound, and Space. In my text, I will embody my own interpretation of these words to take you
 along the experience of Rave.
-</p>
+</p><br>
 <p>Raves&nbsp;&nbsp;<sup class="footnote"><a id="fnref-2" href="#fn-2">2</a></sup>&nbsp;&nbsp;have existed since the 1980s, and
 techno and trance music have massively grown in popularity worldwide in recent years. Social media and marketing
 allowed the scene to explode. Consequently, the genre attracted more people and it became part of the mainstream. In
@@ -765,7 +770,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 	<section class="section-text-block">
 		<div class="subsection subsection-is-main">
 			<section style="color: #ff0000">
-				<h2 id="intergration">INTERGRATION</h2>
+				<h2 id="intergration">INTEGRATION</h2>
 
 				<p>We raved the night away. The brightness of the new day pulls me back to
 					reality as I make my way home. I like this
