--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<!-- favicon, fill with a 512x512px .png image named 'favicon.png' -->
-	<link rel="icon" href="assets/images/favicon/favicon.png" />
+	<link rel="icon" href="assets/images/favicon/favicon2.png" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Stored energy, bound to be released.</title>
 		<link rel="stylesheet" href="assets/css/normalize.css">
@@ -106,9 +106,9 @@
 							<div id="table-of-contents"></div>
 							<li><a href="#abstract">Abstract</a></li>
 							<li><a href="#preperation">preparation</a></li>
-							<li><a href="#chapter-1">01. Sight</a></li>
-							<li><a href="#chapter-2">02. Sound </a></li>
-							<li><a href="#chapter-3">03. Space</a></li>
+							<li><a href="#chapter-1">01 | Sight</a></li>
+							<li><a href="#chapter-2">02 | Sound </a></li>
+							<li><a href="#chapter-3">03 | Space</a></li>
 							<li><a href="#intergration">Integration</a></li>
 							<li><a href="#bibliography">Bibliography</a></li>
 						</ul>
@@ -124,24 +124,24 @@
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: #FF1200; --to:  #d7d7d7"></section>
-<section style="background-color:  #cbcbcb">
+<section style="background-color:  #cdcdcd">
 
 <section class="section-text-block">
 <div class="subsection subsection-is-main">
 <h2 id="abstract">ABSTRACT</h2>
-
+<br>
 <p>In this artistic, sometimes speculative, research document, I will delve into an exploration of three different
-manifestations of energy&nbsp;&nbsp;<sup class="footnote"><a id="fnref-1" href="#fn-1">1</a></sup>&nbsp;that get released
+manifestations of energy <sup class="footnote"><a id="fnref-1" href="#fn-1">1</a></sup> that get released
 at rave parties. These manifestations contain; the light as part of designated scenography, the powerful sonic of
 electronic music, and the kinetic energy of the dancing crowd. I aim to understand how these external influences
-fuel my internal energy. By examining the motivation behind my creative processes,<br> I aim to explore how to transform
+fuel my internal energy. By examining the motivation behind my creative processes, I aim to explore how to transform
 this evoked energy into creative drive. By gaining awareness about this, could this be used as a tool?</p>
 <p>I will reflect on my past experiences at raves while mindfully engaging with a new one. During this, I will heighten
 my awareness and engage all my senses in the experience. I will attentively reflect on, for instance, a
 philosophical text on light or the neurological explanation of how rhythm is connected to emotion. I made notes
 while raving, on which I later reflected by the act of writing. This approach allowed me to use raving as a research
 method. The necessity of mid-process, attending a rave to conclude my statements inherently answers an important
-aspect of what I suppose.</p>
+aspect of what I suppose.</p><br>
 <p>In this document, I explore my main topics from the standpoint of three artistic sources: a piece of writing by
 philosopher Hans Blumenberg, a music-related video of a performance by Jeff Mills, and I will introduce a video
 artwork by Rineke Dijkstra. Analyzing these external and creative sources helped me refine my perspective on the
@@ -164,7 +164,6 @@ a photographer and graphic designer.</p>
 	<br><br>For further reading of my text, I would like you to interpret ‘Energy’ as an urgent force that is capable of
 	transferring its power by the act of release.
 </li>
-</ol>
 </section>
 
 
@@ -174,21 +173,21 @@ a photographer and graphic designer.</p>
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(207, 207, 207); --to: #CCCCCC"></section>
-<section style="background-color: #bbbbbb">
+<section style="background-color: #b5b5b5">
 
 
 <section class="section-text-block">
 
 <div class="subsection subsection-is-main">
 <h2 id="preperation">PREPARATION</h2>
-
+<br>
 <p>This piece of writing is constructed into three chapters: <br>
-<i>—Sight, Sound, and Space.</i> &nbsp;&nbsp;I was inspired by the titles of the three-fold compilation album of tracks by
+<i>—Sight, Sound, and Space.</i> I was inspired by the titles of the three-fold compilation album of tracks by
 Jeff Mills (released in 2019). Each album contains around 14 tracks, curated to embody Mills’s interpretation of the
 three words: Sight, Sound, and Space. In my text, I will embody my own interpretation of these words to take you
 along the experience of Rave.
 </p><br>
-<p>Raves&nbsp;&nbsp;<sup class="footnote"><a id="fnref-2" href="#fn-2">2</a></sup>&nbsp;&nbsp;have existed since the 1980s, and
+<p>Raves&nbsp;<sup class="footnote"><a id="fnref-2" href="#fn-2">2</a></sup>&nbsp;&nbsp;have existed since the 1980s, and
 techno and trance music have massively grown in popularity worldwide in recent years. Social media and marketing
 allowed the scene to explode. Consequently, the genre attracted more people and it became part of the mainstream. In
 this scene, I often experience a high level of compatibility. However, in my view, music isn't about superiority or
@@ -197,7 +196,7 @@ with others. Which is exactly what I intend to do with this document. I aim to w
 explanative text on this universally recognized and admired phenomenon. I believe we can gain a different kind of
 knowledge by intuitively exploring the depths of a subject and by opening up to learn from artistic resources.
 Speculation and imagination, along with external evidence, can bring insightful results in the thesis-world full of
-academic constraints.</p>
+academic constraints.</p><br>
 <p>I've deepened my understanding of these external factors of energy not only by reading about them but also by
 actively absorbing and listening (to) them. But what surprised me the most is how much I've learned through writing
 about these subjects. I see writing as an opportunity to delve into the depths of my psyche and I used it to explore
@@ -230,13 +229,13 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(166, 166, 166); --to:  #B3B3B3"></section>
-<section style="background-color:#a8a7a7">
+<section style="background-color:#979797">
 
 		<section class="section-text-block order">
 		<div class="subsection subsection-is-main">
-		<section style="color:#0055ff">
-			<h2 id="chapter-1">01. SIGHT </h2>
-
+		<section style="color:#0062ff">
+			<h2 id="chapter-1">01 | SIGHT </h2>
+			<br>
 	<p>Through contemplated scenography the spaces where raves occur temporarily transform into utopian places. We travel to
 		unknown destinations, <sup class="footnote"><a id="fnref-3" href="#fn-3">3</a></sup> away from home and normal life.
 		We enter a new landscape. One in which all noses literally and figuratively point in the same direction. Whether the
@@ -334,14 +333,15 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(111, 111, 111); --to: #999999"></section>
-<section style="background-color: #6b6b6b">
+<section style="background-color: #757575">
 
 
 		<section class="section-text-block">
 
 		<div class="subsection subsection-is-main">
-			<section style="color:#a9caff">
-				<h2 id="chapter-2">02. SOUND </h2>
+			<section style="color:#89b6ff">
+				<h2 id="chapter-2">02 | SOUND </h2>
+				<br>
 		<p>In the chapter 'Sound' I will further convey the connection I have with the energy-driven. As well in the visual as
 			the sonic field. Electronic music, in the most literal sense, is made with electronic devices using electricity.
 			When its energy is being released it has the ability to transfer it to me. I'm often told that I have an energetic
@@ -480,9 +480,9 @@ sentences until they resonate with truth, writing itself becomes a research meth
 
 <section class="section-text-block">
 	<div class="subsection subsection-is-main">
-		<section style="color: #d1def2">
-			<h2 id="chapter-3">03. SPACE </h2>
-
+		<section style="color: #cde1ff">
+			<h2 id="chapter-3">03 | SPACE </h2>
+			<br>
 			<p>
 				I interpret the meaning of the word 'Space' as one of being in a state of
 				space within the body and
@@ -504,7 +504,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 					and keeps becoming less likely to stop."
 				</i>&nbsp;&nbsp;<sup class="footnote"><a id="fnref-11" href="#fn-11">11</a></sup>
 			</blockquote>
-			</p>f
+			</p>
 
 			<p>
 				Much like solar panels store sunlight, I've found that I can store momentum
@@ -769,17 +769,15 @@ sentences until they resonate with truth, writing itself becomes a research meth
 
 	<section class="section-text-block">
 		<div class="subsection subsection-is-main">
-			<section style="color: #ff0000">
 				<h2 id="intergration">INTEGRATION</h2>
-
+				<br>
 				<p>We raved the night away. The brightness of the new day pulls me back to
-					reality as I make my way home. I like this
-					moment. It's a moment for reflection in the early hours on the quiet
-					morning streets.
-					My physical body is tired and sore but I can feel it again: the momentum
-					runs through every vein. The remaining
-					question is how and when to integrate this newly gained momentum. For
-					now, I can only speculate:</p>
+					reality as I make my way home. I like this moment. 
+					It's a moment for reflection in the early hours on the quiet
+					morning streets. My physical body is tired and sore but I can feel it again: 
+					the momentum runs through every vein. The remaining question is how and when
+					to integrate this newly gained momentum. For now, I can only speculate..</p>
+					<br>
 
 				<p>From Blumenberg, I learned how light is the absolute power of being.
 					Superior in the field of sight. And I, as the
@@ -803,8 +801,17 @@ sentences until they resonate with truth, writing itself becomes a research meth
 					momentum, we can direct its energy toward
 					what needs it the most. This is the power of transferring gained energy
 					into the one you can give.</p>
-</body>
+					
+				
+			
 </div>
+
+<div class="subsection subsection-is-journal">
+
+	
+
+</div>
+</body>
 </section>
 
 
@@ -822,7 +829,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			<section style="color: #DDFF00;">
 				<h2 id="bibliography">BIBLIOGRAPHY</h2>
 				<ol class="footnotes-list">
-
+					<br>
 
 					<li id="" value="">
 						Graham, K. (2018). Scenographic light : towards an understanding of expressive light in
