--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 	<link rel="stylesheet" href="assets/css/style2.css">
 	<script type="text/javascript" src="assets/js/script.js" defer></script>
+	<link href="css/custom.css" type="text/css" rel="stylesheet"/>
+
 	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
