--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 	<link rel="stylesheet" href="assets/css/style2.css">
 	<script type="text/javascript" src="assets/js/script.js" defer></script>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link href="css/custom.css" type="text/css" rel="stylesheet"/>
 
 	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
