--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="assets/js/script.js" defer></script>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link href="css/custom.css" type="text/css" rel="stylesheet"/>
 
 	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,15 +53,17 @@
 								The moments when I most strongly connected with my writing were during what I call my moments of "writing trance". This state
 								required certain external conditions. Picture this:
 								</p>
+						
 
 								<p>
 								I'm a night owl, my creative state activates around 22:00 and peaks around 3:00.
 							
-								I cleaned up my room and replaced all the candles with new ones. A steaming thermos full of tea is within reach. Four
+								I cleaned up my room and replaced all the finished candles with new ones. A steaming thermos full of tea is within reach. Four
 								different lamps, one of which gives pink light, provide a gentle glow, creating the perfect atmosphere for me to embrace
 								the quiet of the night. While everyone else sleeps, my mind is clear and as ready as it can be.
 								</p>
 								<p>
+								<br>
 								My workspace almost resembles a gamer's setup. My laptop screen is linked to a larger monitor on a pile of magazines. On
 								my screen, I organize the many tabs open to ensure everything is just ‘one shortcut’ away. Three tabs ‘control - right
 								arrow’ and I'm at my ‘music station’ tab. The most important external element of my writing trance. I listen to either
