--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ aspect of what I suppose.</p><br>
 <p>In this document, I explore my main topics from the standpoint of three artistic sources: a piece of writing by
 philosopher Hans Blumenberg, a music-related video of a performance by Jeff Mills, and I will introduce a video
 artwork by Rineke Dijkstra. Analyzing these external and creative sources helped me refine my perspective on the
-topics of my text. It also made me conclude how some elements of energy are integrated into my creative processes as
+topics of my text. It also made me conclude how some elements of 'energy' are integrated into my creative processes as
 a photographer and graphic designer.</p>
 
 </div>
@@ -165,7 +165,7 @@ a photographer and graphic designer.</p>
 	Energy exists in various forms, and with its many definitions originating from physics or the spiritual realm,
 	defining the term 'Energy' is not a task I'm going to tackle in a footnote nor something I want to burn my hands
 	on being a creative maker. Instead, I will ask you to be open to the artistic interpretations I make on energy
-	in this document. I will leave here one of the most basic laws of science. (<a href="https://energyeducation.ca/encyclopedia/Law_of_conservation_of_energy"
+	in this document. I will only leave here one of the most basic laws of science. (<a href="https://energyeducation.ca/encyclopedia/Law_of_conservation_of_energy"
 	target="_blank">url</a>) The Law of the Conservation of
 	Energy: <i>“Energy cannot be created or destroyed; it can only be changed from one form to another”</i>
 	<br><br>For further reading of my text, I would like you to interpret ‘Energy’ as an urgent force that is capable of
@@ -220,7 +220,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <ol class="footnotes-list">
 	<li id="fn-2" value="2">Rave is an umbrella term that covers a music and dance subculture. It’s characterized by the
 		technological, conceptual, and social construction of a sensorial experience that offers the possibility of finding
-		freedom in unity by sharing music engagement through the act of dancing. The term ‘Rave’ holds a certain stigma in
+		freedom in unity by sharing music engagement through the act of dancing. <br><br> The term ‘Rave’ holds a certain stigma in
 		my generation. However, the fact that it means: to do something with 'extravagant enthusiasm’ completely aligns with
 		the message and the style in which I aspire to write.</li>
 
@@ -236,7 +236,7 @@ sentences until they resonate with truth, writing itself becomes a research meth
 <!-- !!!! HIER BEGINT HETVOLGENDE HOOFDSTUK !!! -->
 
 <section class="transition" style="--from: rgb(166, 166, 166); --to:  #B3B3B3"></section>
-<section style="background-color:#979797">
+<section style="background-color:#a5a5a5">
 
 		<section class="section-text-block order">
 		<div class="subsection subsection-is-main">
@@ -253,13 +253,12 @@ sentences until they resonate with truth, writing itself becomes a research meth
 		your everyday thoughts make place for a sensorial experience where seeing, listening, and feeling are paramount.
 		Most central to the scenography is light. It serves not just as an illuminator, but also as the director of the
 		experience, guiding the participant's gaze and emotions. The use of light shapes a dramatic structure. When it comes
-		to raves, light is more than just a tool—it's an integral part of the experience.</p>
-	
-	<p>Light reveals surfaces and faces. It touches the outer 'shell' of the silhouettes of dancing bodies and colorizes the
+		to raves, light is more than just a tool—it's an integral part of the experience.
+		Light reveals surfaces and faces. It touches the outer 'shell' of the silhouettes of dancing bodies and colorizes the
 		often radical architectural environments into places of wonder. Light was also a central element in famous
-		architect; Louis Kahn's philosophy because he regarded it as a <i>“giver of all presences.”</i><br><blockquote>Louis Kahn
+		architect; Louis Kahn's philosophy because he regarded it as the <br><i>“giver of all presences.”</i><br><blockquote>Louis Kahn
 		said: <i>“Even a space intended to be dark should have just enough light from some mysterious opening to tell us
-			how dark it really is.”</i> &nbsp;&nbsp;<sup class="footnote"><a id="fnref-4" href="#fn-4">4</a></sup> &nbsp;</blockquote>
+			how dark it really is.”</i>&nbsp;&nbsp;<sup class="footnote"><a id="fnref-4" href="#fn-4">4</a></sup> </blockquote>
 			I
 		enjoy reading about the concept of light from the perspective of various disciplines. By incorporating elements from
 		these sources into the context of the chapter ‘Sight’ I can awaken the memories I have regarding certain scenography
@@ -267,7 +266,8 @@ sentences until they resonate with truth, writing itself becomes a research meth
 		Blumenberg:</p>
 	
 	<p>
-		<blockquote>
+		<br>
+		<p>
 		<i>Light can be a directed beam, a guiding beacon in the dark, an advancing dethronement of darkness, but also a
 			dazzling super-abundance, as well as an indefinite, omnipresent brightness containing all: the ‘letting-appear’
 			that does not itself appear, the inaccessible accessibility of things. Light and darkness can represent the
@@ -278,11 +278,11 @@ sentences until they resonate with truth, writing itself becomes a research meth
 			Spirit’s consent. Light remains what it is while letting the infinite participate in it; it is consumption
 			without loss. Light produces space, distance, orientation, calm contemplation; it is the gift that makes no
 			demands, the illumination capable of conquering without force.&nbsp;&nbsp;<sup class="footnote"><a id="fnref-5"
-					href="#fn-5">5</a></sup></i></blockquote>
+					href="#fn-5">5</a></sup></i></p><br>
 	</p>
 	
 	<p>I see parallels between his text and my attempt to describe the influence of light at raves. In these spaces, light
-		is not just seen—it's experienced. “Light produces space, distance, orientation, and calm contemplation”. Taking
+		is not just seen—it's experienced. <i>“Light produces space, distance, orientation, and calm contemplation”.</i> Taking
 		from this, it means that by mindfully designing the synergetic landscapes of clubs and festivals the designers get
 		the chance to play with all of these values. By manipulating them our position towards these values changes. It's
 		the ‘invisible hand’ that influences perception. Light designers and scenographers program lights to coincide with,
@@ -292,8 +292,11 @@ sentences until they resonate with truth, writing itself becomes a research meth
 	<p>Though not as literal as in the creation of light installations, light has been the most integral part of my creative
 		processes since I started creating. Light, in its many forms and manifestations, acts as a source of profound
 		inspiration for me. It does so by quite literally illuminating the world that surrounds me, acting as a stimulant
-		that sparks my urgent instinct to capture everything that strikes my eye. The process of creation is a powerful
-		medium through which I can unveil my visual perception of the world to others. It’s a bridge connecting my inner
+		that sparks my urgent instinct to capture everything that strikes my eye. My eyes constantly get pulled towards things
+		like the drawings of interesting rhythmic compositions by shadows, silhouettes that take on new shapes and unfamiliar
+		forms, the sun hitting shiny objects which then tell stories with its sparks, the intriguing little life within the
+		flame of a candle, or the graphical images that appear in the reflections of a window. The process of creation is a
+		powerful medium through which I can unveil my visual perception of the world to others. It’s a bridge connecting my inner
 		perspectives to the outer realities. This could be the reason why I hold photography as my most significant form of
 		creative expression. Photography allows me to immortalize the images I see around me created by light. The geometric
 		boundaries of the shape of a photograph serve as borders in which with carefully chosen limits, I have the power to
